@@ -1,3 +1,8 @@
+2000-09-08  Frank Ch. Eigler  <fche@redhat.com>
+
+	* decode.scm (-population-top-few): Signal error gracefully if
+	decoding is about to become ambiguous.
+
 2000-09-06  Frank Ch. Eigler  <fche@redhat.com>
 
 	* doc/rtl.texi (decode-assist): Describe this field as optional.
